# B_spline_approximation

./: CMakeLists.txt  README.md  class_cubic_bspline.h  main.cpp
raw_points/: road_points_1.txt  road_points_2.txt  road_points_3.txt  road_points_4.txt
